--- a/restaurant/app/assets/stylesheets/scaffolds.css.scss
+++ b/restaurant/app/assets/stylesheets/scaffolds.css.scss
@@ -4,6 +4,9 @@ body {
   font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
   line-height: 18px;
+  margin: 0px;
+
+  padding: 0px;
 }
 
 p, ol, ul, td {
@@ -23,7 +26,7 @@ pre {
 
 div {
   &.field, &.actions {
-    margin-bottom: 10px;
+    
 
   }
 
@@ -46,6 +49,7 @@ div {
   padding-bottom: 0;
   margin-bottom: 20px;
   background-color: #f0f0f0;
+  
   h2 {
     text-align: left;
     font-weight: bold;
